# dummy

./: .gitignore  CMakeLists.txt  cmake_install.cmake  dummy.h  dummy.h.in  dummyprinter.cpp
